<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <TextView
        android:id="@+id/quickpicName"
        android:layout_width="186dp"
        android:layout_height="62dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/quick_pic"
        android:textColor="@color/lavender"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/quickpicImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/quickpicImage"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:src="@mipmap/quick_logo_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/quickpicName"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:id="@+id/row1"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quickpicImage">
        
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/invent_card"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            android:onClick="onInventoryClick">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/invent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/invent_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/Inventory"
                    android:textColor="@color/lavender"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/invent_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/inventory_logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="20dp"
            app:cardCornerRadius="20dp"
            android:onClick="onScanImageClick">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scan_name"
                    android:text="@string/Scan_Image"
                    android:textSize="20sp"
                    android:textColor="@color/lavender"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/scan_image"/>

                <ImageView
                    android:id="@+id/scan_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@mipmap/scan_logo" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>